// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskBar /> Snapshots <Clock /> should match snapshot 1`] = `
.c0 {
  background-color: #c6c6c6;
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #848584, 0.5px 0.5px 0px 0.5px #fefefe;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c2 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    height="auto"
    style="display: flex; justify-content: center; align-items: center;"
    width="auto"
  >
    <div
      class="c1 c2"
    >
      
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with active prop 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c3 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #848584, 0.5px 0.5px 0px 0.5px #fefefe;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  outline: 1px dotted #0a0a0a;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
  <button
    class="c3 c4"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with icon prop 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      data-icon-name="bat"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with small prop 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot 1`] = `
.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: taskbar;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
  padding: 2px;
}

.c1 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c4 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c5 {
  background-color: #c6c6c6;
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #848584, 0.5px 0.5px 0px 0.5px #fefefe;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c1 c2"
      height="auto"
      width="auto"
    >
      <i
        class="c3"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c4"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c5"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c6 c7"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 1`] = `
.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: taskbar;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
  padding: 2px;
}

.c1 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c4 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c5 {
  background-color: #c6c6c6;
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #848584, 0.5px 0.5px 0px 0.5px #fefefe;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c1 c2"
      height="auto"
      width="auto"
    >
      <i
        class="c3"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c4"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c5"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c6 c7"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 2`] = `
<div>
  <div
    class="sc-gGGEav brVipP"
    display="flex"
    height="28"
    width="100%"
  >
    .c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 32px;
  height: 32px;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 4px 6px 3px;
}

.c2 i {
  margin-right: 10px;
}

.c2:hover {
  background-color: #000080;
  color: #fefefe;
}

.c2 ul {
  display: none;
  position: absolute;
  top: -2px;
  left: 97%;
  color: #0a0a0a;
}

.c2 ul i {
  width: 18px;
  height: 20px;
  margin-right: 6px;
}

.c2 svg {
  fill: #0a0a0a;
}

.c1 {
  background-color: #c6c6c6;
  padding: 5px 20px 6px;
  border: none;
  margin: 0;
  padding: 2px;
  list-style: none;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  width: 200px;
}

.c1:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #fefefe;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #fefefe;
  pointer-events: none;
}

.c0 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  position: absolute;
  bottom: 28px;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

<div
      class="c0"
      height="auto"
      width="auto"
    >
      <ul
        class="c1"
        width="200"
      >
        <li
          class="c2"
        >
          <i
            class="c3"
            data-icon-name="reader_closed"
            height="32"
            style="background-image: url(buffer-32-4-1);"
            width="32"
          />
          Local Disk (C:)
        </li>
        <li
          class="c2"
        >
          <i
            class="c3"
            data-icon-name="windows_explorer"
            height="32"
            style="background-image: url(buffer-32-4-1);"
            width="32"
          />
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="sc-gGGEav sc-bShfyb bDNIFb hkEfAX"
      height="auto"
      width="auto"
    >
      <i
        class="sc-gstumO gYrVcR"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="sc-gGGEav kYVzTy"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="sc-gGGEav dGMOkd"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="sc-jhGSUB cMTgYS sc-hkoqCG bWdxdI"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with one Modal 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c13 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c6:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c10 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: taskbar;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
  padding: 2px;
}

.c11 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c14 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c15 {
  background-color: #c6c6c6;
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #848584, 0.5px 0.5px 0px 0.5px #fefefe;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c16 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c17 div:first-child {
  right: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      />
    </section>
  </div>
  <div
    class="c10"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c11 c12"
      height="auto"
      width="auto"
    >
      <i
        class="c13"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c14"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c15"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c16 c17"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with two Modals 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c13 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c6:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c10 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: taskbar;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
  padding: 2px;
}

.c11 {
  background-color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #fefefe, inset 0 0 0 1px #848584, 1px 0px 0 0px #0a0a0a, 0px 1px 0 0px #0a0a0a, 1px 1px 0 0px #0a0a0a;
}

.c14 {
  background-color: #c6c6c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c15 {
  background-color: #c6c6c6;
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #848584, 0.5px 0.5px 0px 0.5px #fefefe;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c16 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c17 div:first-child {
  right: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="windows_explorer"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          Windows Explorer
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      />
    </section>
  </div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      />
    </section>
  </div>
  <div
    class="c10"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c11 c12"
      height="auto"
      width="auto"
    >
      <i
        class="c13"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c14"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c15"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c16 c17"
      >
        
      </div>
    </div>
  </div>
</div>
`;
